--- a/LSE-DataPitchClinic_10_2025.html
+++ b/LSE-DataPitchClinic_10_2025.html
@@ -31,7 +31,17 @@
             color: #4A4A4A;
         }
         .lse-bg-gray {
-            background-color: #F8F8F8;
+            background: linear-gradient(135deg, #f8fafc 0%, #e2e8f0 100%);
+        }
+        .modern-gradient {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        }
+        .card-hover {
+            transition: all 0.3s ease;
+        }
+        .card-hover:hover {
+            transform: translateY(-8px);
+            box-shadow: 0 20px 40px rgba(0,0,0,0.1);
         }
         @keyframes fadeIn {
             from { opacity: 0; transform: translateY(20px); }
@@ -51,12 +61,12 @@
     <!-- Main Slide Container -->
     <div id="slide-container" class="w-full h-full bg-white rounded-2xl shadow-2xl overflow-hidden relative flex flex-col">
         <!-- Slide 1: Title -->
-        <div class="slide active h-full w-full flex-col justify-center items-center text-center p-8 md:p-16 bg-cover bg-center" style="background-image: url('https://placehold.co/1200x800/003248/FFFFFF?text=&font=inter');">
-            <div class="absolute inset-0 bg-slate-900 opacity-60"></div>
+        <div class="slide active h-full w-full flex-col justify-center items-center text-center p-8 md:p-16 modern-gradient">
+            <div class="absolute inset-0 bg-gradient-to-br from-purple-900/20 to-blue-900/20"></div>
             <div class="relative z-10 text-white">
                 <h3 class="text-xl md:text-2xl font-semibold tracking-wider fade-in-up">LSE DATA ANALYTICS CAREER ACCELERATOR</h3>
                 <h1 class="text-5xl md:text-7xl font-black mt-4 mb-6 leading-tight fade-in-up fade-in-up-delay-1">Data Pitch Clinic:<br/>From Data to Impact</h1>
-                <p class="text-lg md:text-xl font-medium fade-in-up fade-in-up-delay-2">Andreas Schmidberger</p>
+                <p class="text-lg md:text-xl font-medium fade-in-up fade-in-up-delay-2">Markus Schmidberger</p>
                 <p class="text-md md:text-lg text-gray-300 fade-in-up fade-in-up-delay-3">Data Leadership Coach | October 2025</p>
             </div>
         </div>
@@ -111,31 +121,31 @@
             <h2 class="text-4xl md:text-5xl font-bold text-center lse-gray mb-12 fade-in-up">The 3-Part Pitch Framework</h2>
             <div class="max-w-7xl w-full grid grid-cols-1 md:grid-cols-3 gap-8">
                 <!-- Part 1: Context -->
-                <div class="bg-white p-8 rounded-xl shadow-lg transform hover:scale-105 transition-transform duration-300 fade-in-up fade-in-up-delay-1">
+                <div class="bg-white p-8 rounded-2xl shadow-xl card-hover fade-in-up fade-in-up-delay-1 border border-gray-100">
                     <div class="flex items-center mb-4">
                         <span class="text-4xl font-black text-red-500 mr-4">1</span>
                         <h3 class="text-2xl font-bold text-gray-800">The Context (The "Before")</h3>
                     </div>
                     <p class="text-gray-600 mb-4">Briefly state your background or the business problem.</p>
-                    <p class="italic text-gray-500 p-4 bg-gray-50 rounded-md">"In my previous role at a retail company, we struggled with understanding customer churn..."</p>
+                    <p class="italic text-gray-500 p-4 bg-gradient-to-r from-gray-50 to-gray-100 rounded-lg">"In my previous role at a retail company, we struggled with understanding customer churn..."</p>
                 </div>
                 <!-- Part 2: Action -->
-                <div class="bg-white p-8 rounded-xl shadow-lg transform hover:scale-105 transition-transform duration-300 fade-in-up fade-in-up-delay-2">
+                <div class="bg-white p-8 rounded-2xl shadow-xl card-hover fade-in-up fade-in-up-delay-2 border border-gray-100">
                     <div class="flex items-center mb-4">
                         <span class="text-4xl font-black text-red-500 mr-4">2</span>
                         <h3 class="text-2xl font-bold text-gray-800">The Action (Your Part)</h3>
                     </div>
                     <p class="text-gray-600 mb-4">Describe what **you** did. Mention 1-2 key data skills/tools.</p>
-                    <p class="italic text-gray-500 p-4 bg-gray-50 rounded-md">"...so I used Python to analyze transaction data and built a predictive model to identify at-risk customers."</p>
+                    <p class="italic text-gray-500 p-4 bg-gradient-to-r from-gray-50 to-gray-100 rounded-lg">"...so I used Python to analyze transaction data and built a predictive model to identify at-risk customers."</p>
                 </div>
                 <!-- Part 3: Impact -->
-                <div class="bg-white p-8 rounded-xl shadow-lg transform hover:scale-105 transition-transform duration-300 fade-in-up fade-in-up-delay-3 border-t-8 border-red-500">
+                <div class="bg-gradient-to-br from-red-50 to-pink-50 p-8 rounded-2xl shadow-xl card-hover fade-in-up fade-in-up-delay-3 border-2 border-red-200">
                     <div class="flex items-center mb-4">
                         <span class="text-4xl font-black text-red-500 mr-4">3</span>
                         <h3 class="text-2xl font-bold text-gray-800">The Impact (The "So What?")</h3>
                     </div>
                     <p class="text-gray-600 mb-4 font-semibold">This is crucial! Quantify the result. How did you help the business?</p>
-                    <p class="italic text-gray-500 p-4 bg-gray-50 rounded-md">"...This reduced churn by 15% in Q1, saving an estimated £200,000."</p>
+                    <p class="italic text-gray-500 p-4 bg-gradient-to-r from-red-100 to-pink-100 rounded-lg">"...This reduced churn by 15% in Q1, saving an estimated £200,000."</p>
                 </div>
             </div>
         </div>
@@ -145,17 +155,17 @@
             <h2 class="text-4xl md:text-5xl font-bold text-center lse-gray mb-2 fade-in-up">Let's Practice: The Pitch Clinic</h2>
             <p class="text-2xl text-red-600 font-semibold mb-12 fade-in-up fade-in-up-delay-1">(30 Minutes)</p>
             <div class="max-w-6xl w-full grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
-                <div class="p-6 bg-gray-50 rounded-lg fade-in-up fade-in-up-delay-2">
+                <div class="p-8 bg-gradient-to-br from-blue-50 to-indigo-50 rounded-2xl shadow-lg card-hover fade-in-up fade-in-up-delay-2 border border-blue-100">
                     <div class="text-5xl mb-4">✍️</div>
                     <h3 class="text-2xl font-bold text-gray-800">Step 1: Prepare (5 mins)</h3>
                     <p class="mt-2 text-gray-600">Use the 3-Part Framework to structure a 90-second pitch.</p>
                 </div>
-                <div class="p-6 bg-gray-50 rounded-lg fade-in-up fade-in-up-delay-3">
+                <div class="p-8 bg-gradient-to-br from-green-50 to-emerald-50 rounded-2xl shadow-lg card-hover fade-in-up fade-in-up-delay-3 border border-green-100">
                     <div class="text-5xl mb-4">🎤</div>
                     <h3 class="text-2xl font-bold text-gray-800">Step 2: Pitch & Feedback (20 mins)</h3>
                     <p class="mt-2 text-gray-600">Deliver your pitch in small groups and provide constructive feedback.</p>
                 </div>
-                <div class="p-6 bg-gray-50 rounded-lg fade-in-up fade-in-up-delay-4">
+                <div class="p-8 bg-gradient-to-br from-purple-50 to-pink-50 rounded-2xl shadow-lg card-hover fade-in-up fade-in-up-delay-4 border border-purple-100">
                     <div class="text-5xl mb-4">💡</div>
                     <h3 class="text-2xl font-bold text-gray-800">Step 3: Group Debrief (5 mins)</h3>
                     <p class="mt-2 text-gray-600">We'll come back together to share key learnings.</p>
@@ -189,8 +199,8 @@
         </div>
 
         <!-- Slide 7: Q&A and Thank You -->
-        <div class="slide h-full w-full flex-col justify-center items-center text-center p-8 md:p-16 bg-cover bg-center" style="background-image: url('https://placehold.co/1200x800/003248/FFFFFF?text=&font=inter');">
-            <div class="absolute inset-0 bg-slate-900 opacity-60"></div>
+        <div class="slide h-full w-full flex-col justify-center items-center text-center p-8 md:p-16 modern-gradient">
+            <div class="absolute inset-0 bg-gradient-to-br from-purple-900/30 to-blue-900/30"></div>
             <div class="relative z-10 text-white">
                 <h2 class="text-6xl md:text-8xl font-black fade-in-up">Questions?</h2>
                 <p class="text-xl md:text-2xl mt-8 mb-10 fade-in-up fade-in-up-delay-1">Thank you for your active participation!</p>
