Move AI slide before Key Takeaways

--- a/LSE-DataPitchClinic_10_2025.html
+++ b/LSE-DataPitchClinic_10_2025.html
@@ -69,8 +69,9 @@
             <div class="relative z-10 text-white">
                 <h3 class="text-xl md:text-2xl font-semibold tracking-wider fade-in-up">LSE DATA ANALYTICS CAREER ACCELERATOR</h3>
                 <h1 class="text-5xl md:text-7xl font-black mt-4 mb-6 leading-tight fade-in-up fade-in-up-delay-1">Data Pitch Clinic:<br/>From Data to Impact</h1>
-                <p class="text-lg md:text-xl font-medium fade-in-up fade-in-up-delay-2">Markus Schmidberger</p>
-                <p class="text-md md:text-lg text-gray-300 fade-in-up fade-in-up-delay-3">Data Leadership Coach & CTO at JuntoAI | October 2025</p>
+                <p class="text-lg md:text-xl font-medium fade-in-up fade-in-up-delay-2">Dr. Markus Schmidberger</p>
+                <p class="text-md md:text-lg text-gray-300 fade-in-up fade-in-up-delay-3">Data Leadership Coach & CTO at JuntoAI</p>
+                <p class="text-md md:text-lg text-gray-300 fade-in-up fade-in-up-delay-3">October 2025</p>
             </div>
         </div>
 
@@ -236,22 +237,30 @@
                 <!-- Where it comes from -->
                 <div class="p-5 bg-white rounded-2xl shadow-lg fade-in-up fade-in-up-delay-3">
                     <h3 class="text-xl font-bold text-gray-800 mb-3">Where does it come from?</h3>
-                    <div class="grid grid-cols-1 md:grid-cols-2 gap-3 text-gray-700 text-sm">
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-4 text-gray-700 text-sm">
                         <div class="flex items-start">
-                            <span class="text-red-500 mr-2 text-lg">•</span>
-                            <span>Different languages and priorities</span>
+                            <span class="text-red-500 mr-2 text-lg font-bold">•</span>
+                            <div>
+                                <strong>Different languages:</strong> Data teams use technical jargon while business speaks ROI and KPIs
+                            </div>
                         </div>
                         <div class="flex items-start">
-                            <span class="text-red-500 mr-2 text-lg">•</span>
-                            <span>Lack of business context in data teams</span>
+                            <span class="text-red-500 mr-2 text-lg font-bold">•</span>
+                            <div>
+                                <strong>Siloed teams:</strong> Data scientists work isolated from business strategy and customer needs
+                            </div>
                         </div>
                         <div class="flex items-start">
-                            <span class="text-red-500 mr-2 text-lg">•</span>
-                            <span>Technical complexity obscures value</span>
+                            <span class="text-red-500 mr-2 text-lg font-bold">•</span>
+                            <div>
+                                <strong>Technical focus:</strong> Emphasis on model accuracy over business impact and usability
+                            </div>
                         </div>
                         <div class="flex items-start">
-                            <span class="text-red-500 mr-2 text-lg">•</span>
-                            <span>Misaligned success metrics</span>
+                            <span class="text-red-500 mr-2 text-lg font-bold">•</span>
+                            <div>
+                                <strong>Misaligned metrics:</strong> Success measured in technical terms, not business outcomes
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -376,7 +385,56 @@
             </div>
         </div>
 
-        <!-- Slide 10: Key Takeaways -->
+        <!-- Slide 10: Use the Power of AI -->
+        <div class="slide h-full w-full flex flex-col justify-center items-center p-8 md:p-16 bg-white">
+            <h2 class="text-4xl md:text-5xl font-bold text-center lse-gray mb-6 fade-in-up">🤖 Use the Power of AI</h2>
+            <p class="text-lg text-gray-600 text-center mb-8 fade-in-up fade-in-up-delay-1">Tailor your pitch for different audiences instantly</p>
+            
+            <div class="max-w-6xl w-full space-y-4">
+                <!-- Original Pitch -->
+                <div class="p-4 bg-gradient-to-br from-gray-50 to-gray-100 rounded-xl shadow-md border-2 border-gray-300 fade-in-up fade-in-up-delay-1">
+                    <h3 class="text-lg font-bold text-gray-800 mb-2">📝 Your Original Pitch:</h3>
+                    <p class="text-sm text-gray-700 italic">"Our intelligent chat function increased buyer-seller connections by 35%, leading to 12% more completed transactions and €2.3M additional revenue per quarter."</p>
+                </div>
+
+                <!-- AI-Generated Versions -->
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+                    <!-- For CEO -->
+                    <div class="p-4 bg-gradient-to-br from-blue-50 to-indigo-50 rounded-xl shadow-lg border-2 border-blue-200 fade-in-up fade-in-up-delay-2">
+                        <div class="flex items-center mb-2">
+                            <span class="text-2xl mr-2">👔</span>
+                            <h3 class="text-md font-bold text-blue-800">For the CEO</h3>
+                        </div>
+                        <p class="text-xs text-gray-700">"Our AI chat solution directly supports our growth strategy by accelerating the sales cycle. We've achieved 12% transaction growth and €9.2M annual revenue increase, positioning us ahead of competitors in digital customer engagement."</p>
+                    </div>
+
+                    <!-- For CFO -->
+                    <div class="p-4 bg-gradient-to-br from-green-50 to-emerald-50 rounded-xl shadow-lg border-2 border-green-200 fade-in-up fade-in-up-delay-3">
+                        <div class="flex items-center mb-2">
+                            <span class="text-2xl mr-2">💰</span>
+                            <h3 class="text-md font-bold text-green-800">For the CFO</h3>
+                        </div>
+                        <p class="text-xs text-gray-700">"The chat function delivers €2.3M quarterly revenue with minimal operational cost. ROI of 340% in first year, with 35% improvement in lead conversion efficiency. Implementation cost recovered in 3.2 months."</p>
+                    </div>
+
+                    <!-- For CTO -->
+                    <div class="p-4 bg-gradient-to-br from-purple-50 to-pink-50 rounded-xl shadow-lg border-2 border-purple-200 fade-in-up fade-in-up-delay-4">
+                        <div class="flex items-center mb-2">
+                            <span class="text-2xl mr-2">⚙️</span>
+                            <h3 class="text-md font-bold text-purple-800">For the CTO</h3>
+                        </div>
+                        <p class="text-xs text-gray-700">"Built on scalable ML architecture with 92% accuracy and sub-200ms response time. Seamlessly integrated with existing CRM, processing 50K+ conversations monthly. Python-based, cloud-native, with automated retraining pipeline."</p>
+                    </div>
+                </div>
+
+                <!-- AI Tip -->
+                <div class="p-4 bg-yellow-50 border-l-4 border-yellow-500 rounded-lg fade-in-up fade-in-up-delay-4">
+                    <p class="text-sm font-semibold text-gray-800">💡 <strong>Pro Tip:</strong> Use ChatGPT, Claude, or other AI tools to instantly adapt your pitch: "Rephrase this pitch for a [CEO/CFO/CTO] focusing on [strategy/financials/technology]"</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Slide 11: Key Takeaways -->
         <div class="slide h-full w-full flex items-center justify-center p-8 md:p-16 bg-white">
              <div class="w-full max-w-4xl text-left">
                 <h2 class="text-4xl md:text-5xl font-bold lse-gray mb-12 fade-in-up">Key Takeaways & Confidence Boosters</h2>
@@ -401,7 +459,7 @@
             </div>
         </div>
 
-        <!-- Slide 11: Reading Recommendations -->
+        <!-- Slide 12: Reading Recommendations -->
         <div class="slide h-full w-full flex flex-col justify-center items-center p-8 md:p-16 lse-bg-gray">
             <h2 class="text-4xl md:text-5xl font-bold text-center lse-gray mb-12 fade-in-up">Recommended Reading</h2>
             <div class="max-w-5xl w-full space-y-6">
@@ -424,7 +482,7 @@
             </div>
         </div>
 
-        <!-- Slide 12: Q&A and Thank You -->
+        <!-- Slide 13: Q&A and Thank You -->
         <div class="slide h-full w-full flex flex-col justify-center items-center text-center p-8 md:p-16 modern-gradient">
             <div class="absolute inset-0 bg-gradient-to-br from-purple-900/30 to-blue-900/30"></div>
             <div class="relative z-10 text-white">
@@ -450,7 +508,7 @@
                     <button id="prevBtn" class="p-2 rounded-full bg-gray-600 text-white hover:bg-red-600 transition-colors disabled:opacity-50 disabled:cursor-not-allowed">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" /></svg>
                     </button>
-                    <div id="slide-counter" class="text-sm font-medium text-gray-700">1 / 12</div>
+                    <div id="slide-counter" class="text-sm font-medium text-gray-700">1 / 13</div>
                     <button id="nextBtn" class="p-2 rounded-full bg-gray-600 text-white hover:bg-red-600 transition-colors disabled:opacity-50 disabled:cursor-not-allowed">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" /></svg>
                     </button>
