--- a/LSE-DataPitchClinic_10_2025.html
+++ b/LSE-DataPitchClinic_10_2025.html
@@ -70,8 +70,7 @@
                 <h3 class="text-xl md:text-2xl font-semibold tracking-wider fade-in-up">LSE DATA ANALYTICS CAREER ACCELERATOR</h3>
                 <h1 class="text-5xl md:text-7xl font-black mt-4 mb-6 leading-tight fade-in-up fade-in-up-delay-1">Data Pitch Clinic:<br/>From Data to Impact</h1>
                 <p class="text-lg md:text-xl font-medium fade-in-up fade-in-up-delay-2">Dr. Markus Schmidberger</p>
-                <p class="text-md md:text-lg text-gray-300 fade-in-up fade-in-up-delay-3">Data Leadership Coach & CTO at JuntoAI</p>
-                <p class="text-md md:text-lg text-gray-300 fade-in-up fade-in-up-delay-3">October 2025</p>
+                <p class="text-md md:text-lg text-gray-300 fade-in-up fade-in-up-delay-3">Data Leadership Coach & CTO at JuntoAI | October 2025</p>
             </div>
         </div>
 
@@ -503,7 +502,7 @@
         <!-- Navigation and Footer -->
         <div class="absolute bottom-0 left-0 right-0 p-4 bg-white/50 backdrop-blur-sm">
             <div class="max-w-7xl mx-auto flex justify-between items-center">
-                <div class="text-sm text-gray-600">LSE Data Analytics Career Accelerator | Data Pitch Clinic</div>
+                <div class="text-sm text-gray-600">LSE Data Analytics Career Accelerator | Data Pitch Clinic | Dr. Markus Schmidberger</div>
                 <div class="flex items-center gap-4">
                     <button id="prevBtn" class="p-2 rounded-full bg-gray-600 text-white hover:bg-red-600 transition-colors disabled:opacity-50 disabled:cursor-not-allowed">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" /></svg>
