--- a/LSE-DataPitchClinic_10_2025.html
+++ b/LSE-DataPitchClinic_10_2025.html
@@ -344,18 +344,30 @@
         <!-- Slide 8: Exercise 1 - Craft Your Context -->
         <div class="slide h-full w-full flex flex-col justify-center items-center p-8 md:p-16 bg-white">
             <h2 class="text-4xl md:text-5xl font-bold text-center lse-gray mb-2 fade-in-up">Exercise 1: Craft Your Context</h2>
-            <p class="text-2xl text-red-600 font-semibold mb-8 fade-in-up fade-in-up-delay-1">(5 Minutes)</p>
-            <div class="max-w-5xl w-full">
-                <div class="p-8 bg-gradient-to-br from-blue-50 to-indigo-50 rounded-2xl shadow-lg border border-blue-100 fade-in-up fade-in-up-delay-2">
-                    <div class="text-5xl mb-4 text-center">✍️</div>
-                    <h3 class="text-2xl font-bold text-gray-800 mb-4 text-center">Write down your "Before" statement</h3>
-                    <p class="text-lg text-gray-700 mb-4">Think of a data project or experience. In 1-2 sentences, describe:</p>
-                    <ul class="space-y-3 text-gray-700 ml-6">
+            <p class="text-2xl text-red-600 font-semibold mb-6 fade-in-up fade-in-up-delay-1">(5 Minutes)</p>
+            <div class="max-w-6xl w-full">
+                <div class="p-6 bg-gradient-to-br from-blue-50 to-indigo-50 rounded-2xl shadow-lg border border-blue-100 fade-in-up fade-in-up-delay-2">
+                    <div class="text-4xl mb-3 text-center">✍️</div>
+                    <h3 class="text-xl font-bold text-gray-800 mb-3 text-center">Write down your "Before" statement</h3>
+                    <p class="text-base text-gray-700 mb-3">Think of a data project or experience. In 1-2 sentences, describe:</p>
+                    <ul class="space-y-2 text-gray-700 ml-6 text-sm">
                         <li class="flex items-start"><span class="text-blue-600 mr-2">•</span>What was the business problem or challenge?</li>
                         <li class="flex items-start"><span class="text-blue-600 mr-2">•</span>Why did it matter to the organization?</li>
                     </ul>
-                    <div class="mt-6 p-4 bg-white rounded-lg border-l-4 border-blue-500">
-                        <p class="text-gray-600 italic">Example: "Our e-commerce team was losing customers at checkout, with a 40% cart abandonment rate costing us revenue."</p>
+                    
+                    <div class="mt-4 grid grid-cols-1 md:grid-cols-2 gap-3">
+                        <div class="p-3 bg-white rounded-lg border-l-4 border-blue-500">
+                            <p class="text-xs font-semibold text-blue-700 mb-1">With work experience:</p>
+                            <p class="text-xs text-gray-600 italic">"Our e-commerce team was losing customers at checkout, with a 40% cart abandonment rate costing us revenue."</p>
+                        </div>
+                        <div class="p-3 bg-white rounded-lg border-l-4 border-green-500">
+                            <p class="text-xs font-semibold text-green-700 mb-1">Fresh graduate / Academic project:</p>
+                            <p class="text-xs text-gray-600 italic">"In my university capstone, I analyzed student dropout patterns. Universities lose £20K per dropout, affecting both revenue and reputation."</p>
+                        </div>
+                    </div>
+                    
+                    <div class="mt-3 p-3 bg-yellow-50 rounded-lg border-l-4 border-yellow-500">
+                        <p class="text-xs text-gray-700"><strong>No experience yet?</strong> Use coursework, personal projects, Kaggle competitions, or hypothetical scenarios from case studies. Focus on the <em>potential</em> business impact!</p>
                     </div>
                 </div>
             </div>
