--- a/LSE-DataPitchClinic_10_2025.html
+++ b/LSE-DataPitchClinic_10_2025.html
@@ -434,7 +434,7 @@
                             <span class="text-2xl mr-2">⚙️</span>
                             <h3 class="text-md font-bold text-purple-800">For the CTO</h3>
                         </div>
-                        <p class="text-xs text-gray-700">"Built on scalable ML architecture with 92% accuracy and sub-200ms response time. Seamlessly integrated with existing CRM, processing 50K+ conversations monthly. Python-based, cloud-native, with automated retraining pipeline."</p>
+                        <p class="text-xs text-gray-700">"Our scalable ML chat system handles 50K+ conversations monthly, reducing customer service costs by 30%. Built with 92% accuracy and sub-200ms response time, seamlessly integrated with existing CRM. Cloud-native architecture enables rapid scaling to support business growth."</p>
                     </div>
                 </div>
 
