Update book recommendation, fix title slide, clarify trillion, and other improvements

--- a/LSE-DataPitchClinic_10_2025.html
+++ b/LSE-DataPitchClinic_10_2025.html
@@ -70,7 +70,8 @@
                 <h3 class="text-xl md:text-2xl font-semibold tracking-wider fade-in-up">LSE DATA ANALYTICS CAREER ACCELERATOR</h3>
                 <h1 class="text-5xl md:text-7xl font-black mt-4 mb-6 leading-tight fade-in-up fade-in-up-delay-1">Data Pitch Clinic:<br/>From Data to Impact</h1>
                 <p class="text-lg md:text-xl font-medium fade-in-up fade-in-up-delay-2">Dr. Markus Schmidberger</p>
-                <p class="text-md md:text-lg text-gray-300 fade-in-up fade-in-up-delay-3">Data Leadership Coach & CTO at JuntoAI | October 2025</p>
+                <p class="text-md md:text-lg text-gray-300 fade-in-up fade-in-up-delay-3">Data Leadership Coach & CTO at JuntoAI</p>
+                <p class="text-md md:text-lg text-gray-300 fade-in-up fade-in-up-delay-3">October 2025</p>
             </div>
         </div>
 
@@ -220,7 +221,7 @@
                 <!-- Impact Statistics -->
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-4 fade-in-up fade-in-up-delay-2">
                     <div class="p-4 bg-gradient-to-br from-red-50 to-pink-50 rounded-xl shadow-md border-2 border-red-200">
-                        <div class="text-4xl font-black text-red-600 mb-1">$3.1T</div>
+                        <div class="text-4xl font-black text-red-600 mb-1">$3.1 Trillion</div>
                         <p class="text-sm text-gray-700 font-semibold">Annual global loss from poor data quality</p>
                     </div>
                     <div class="p-4 bg-gradient-to-br from-orange-50 to-yellow-50 rounded-xl shadow-md border-2 border-orange-200">
@@ -475,8 +476,8 @@
             <h2 class="text-4xl md:text-5xl font-bold text-center lse-gray mb-12 fade-in-up">Recommended Reading</h2>
             <div class="max-w-5xl w-full space-y-6">
                 <div class="p-6 bg-white rounded-2xl shadow-lg border-l-4 border-red-500 fade-in-up fade-in-up-delay-1">
-                    <h3 class="text-xl font-bold text-gray-800 mb-2">📚 Humanize: How Data-Driven Insights Can Help Us Understand and Improve the Human Condition</h3>
-                    <p class="text-gray-600">by Christian Madsbjerg - Bridging data and human understanding</p>
+                    <h3 class="text-xl font-bold text-gray-800 mb-2">📚 <a href="https://amzn.eu/d/2t49X5Y" target="_blank" class="text-gray-800 hover:text-red-600 transition-colors">Humanizing Data Strategy: Leading Data with the Head and the Heart</a></h3>
+                    <p class="text-gray-600">Bridging the gap between technical data work and human-centered business value</p>
                 </div>
                 <div class="p-6 bg-white rounded-2xl shadow-lg border-l-4 border-blue-500 fade-in-up fade-in-up-delay-2">
                     <h3 class="text-xl font-bold text-gray-800 mb-2">📚 Storytelling with Data: A Data Visualization Guide for Business Professionals</h3>
