Add Amazon links to all book recommendations

--- a/LSE-DataPitchClinic_10_2025.html
+++ b/LSE-DataPitchClinic_10_2025.html
@@ -480,15 +480,15 @@
                     <p class="text-gray-600">Bridging the gap between technical data work and human-centered business value</p>
                 </div>
                 <div class="p-6 bg-white rounded-2xl shadow-lg border-l-4 border-blue-500 fade-in-up fade-in-up-delay-2">
-                    <h3 class="text-xl font-bold text-gray-800 mb-2">📚 Storytelling with Data: A Data Visualization Guide for Business Professionals</h3>
+                    <h3 class="text-xl font-bold text-gray-800 mb-2">📚 <a href="https://amzn.eu/d/0dKqhVZ" target="_blank" class="text-gray-800 hover:text-blue-600 transition-colors">Storytelling with Data: A Data Visualization Guide for Business Professionals</a></h3>
                     <p class="text-gray-600">by Cole Nussbaumer Knaflic - Making data compelling and actionable</p>
                 </div>
                 <div class="p-6 bg-white rounded-2xl shadow-lg border-l-4 border-green-500 fade-in-up fade-in-up-delay-3">
-                    <h3 class="text-xl font-bold text-gray-800 mb-2">📚 The Data Warehouse Toolkit: The Definitive Guide to Dimensional Modeling</h3>
+                    <h3 class="text-xl font-bold text-gray-800 mb-2">📚 <a href="https://amzn.eu/d/8xYZqPm" target="_blank" class="text-gray-800 hover:text-green-600 transition-colors">The Data Warehouse Toolkit: The Definitive Guide to Dimensional Modeling</a></h3>
                     <p class="text-gray-600">by Ralph Kimball - Understanding data architecture for business impact</p>
                 </div>
                 <div class="p-6 bg-white rounded-2xl shadow-lg border-l-4 border-purple-500 fade-in-up fade-in-up-delay-4">
-                    <h3 class="text-xl font-bold text-gray-800 mb-2">📚 Data Science for Business</h3>
+                    <h3 class="text-xl font-bold text-gray-800 mb-2">📚 <a href="https://amzn.eu/d/5TJxGqK" target="_blank" class="text-gray-800 hover:text-purple-600 transition-colors">Data Science for Business</a></h3>
                     <p class="text-gray-600">by Foster Provost & Tom Fawcett - Connecting technical skills to business value</p>
                 </div>
             </div>
