Update CAM Slide 3 and 8: Add numbers to intro boxes, improve executive pitches with business problems

--- a/CAM-DataPitchClinic_10_2025.html
+++ b/CAM-DataPitchClinic_10_2025.html
@@ -136,19 +136,19 @@
 
         <!-- Slide 3: Dr. Markus Schmidberger Introduction -->
         <div class="slide h-full w-full flex flex-col justify-start items-center p-8 md:p-16 bg-white">
-            <h2 class="text-4xl md:text-5xl font-bold text-center lse-gray mb-12 fade-in-up">Dr. Markus Schmidberger</h2>
+            <h2 class="text-4xl md:text-5xl font-bold text-center cam-gray mb-12 fade-in-up">Dr. Markus Schmidberger</h2>
             <div class="max-w-4xl w-full space-y-6">
-                <div class="p-6 bg-gradient-to-br from-red-50 to-pink-50 rounded-xl shadow-lg border-l-4 border-red-500 fade-in-up fade-in-up-delay-1">
-                    <p class="text-lg text-gray-700">I was the first one to run R on a supercomputer and analyzed Novartis cancer data for thousands of people.</p>
+                <div class="p-6 bg-gradient-to-br from-blue-50 to-indigo-50 rounded-xl shadow-lg border-l-4 border-blue-500 fade-in-up fade-in-up-delay-1">
+                    <p class="text-lg text-gray-700">During my PhD thesis I worked with Novartis on cancer research using supercomputers.</p>
                 </div>
-                <div class="p-6 bg-gradient-to-br from-red-50 to-pink-50 rounded-xl shadow-lg border-l-4 border-red-500 fade-in-up fade-in-up-delay-2">
-                    <p class="text-lg text-gray-700">At Amazon, I helped companies migrate their data from on-premise to the cloud.</p>
+                <div class="p-6 bg-gradient-to-br from-blue-50 to-indigo-50 rounded-xl shadow-lg border-l-4 border-blue-500 fade-in-up fade-in-up-delay-2">
+                    <p class="text-lg text-gray-700">At Amazon, I helped enterprise clients migrate to the cloud.</p>
                 </div>
-                <div class="p-6 bg-gradient-to-br from-red-50 to-pink-50 rounded-xl shadow-lg border-l-4 border-red-500 fade-in-up fade-in-up-delay-3">
-                    <p class="text-lg text-gray-700">With glomex, I built the first real-time Lambda Architecture and won the Gartner Best Practice Award.</p>
+                <div class="p-6 bg-gradient-to-br from-blue-50 to-indigo-50 rounded-xl shadow-lg border-l-4 border-blue-500 fade-in-up fade-in-up-delay-3">
+                    <p class="text-lg text-gray-700">At glomex, I built the first real-time Lambda Architecture for video streaming.</p>
                 </div>
-                <div class="p-6 bg-gradient-to-br from-green-50 to-emerald-50 rounded-xl shadow-lg border-l-4 border-green-500 fade-in-up fade-in-up-delay-4">
-                    <p class="text-lg text-gray-700 font-semibold">At Scout24, I led data teams that drove a data culture transformation across the organization, enabling self-service analytics that resulted in <span class="text-green-600">10 new data products launched and product managers reporting 12x faster decision-making</span>.</p>
+                <div class="p-6 bg-gradient-to-br from-blue-50 to-indigo-50 rounded-xl shadow-lg border-l-4 border-blue-500 fade-in-up fade-in-up-delay-4">
+                    <p class="text-lg text-gray-700">At Scout24, I led data teams driving culture transformation, enabling <span class="text-blue-600 font-semibold">10 new data products and 12x faster decision-making</span>.</p>
                 </div>
             </div>
         </div>
@@ -316,10 +316,10 @@
             <h2 class="text-4xl md:text-5xl font-bold text-center cam-gray mb-12 fade-in-up">Perfect Executive Pitches</h2>
             <div class="max-w-4xl w-full space-y-6">
                 <div class="p-6 bg-gradient-to-br from-green-50 to-emerald-50 rounded-xl shadow-lg border-l-4 border-green-500 fade-in-up fade-in-up-delay-1">
-                    <p class="text-lg text-gray-700 font-semibold"><span class="text-green-600">Novartis Cancer Research:</span> Pioneered parallel computing for patient data analysis, <span class="text-green-600">reducing drug discovery time by 40% and accelerating 3 clinical trials</span> to market.</p>
+                    <p class="text-lg text-gray-700 font-semibold">Novartis wasn't able to compare more than 100 patient data and couldn't simulate impact of gene elimination. In my PhD thesis I developed computational methods enabling analysis of thousands of patients, <span class="text-green-600">reducing drug discovery time by 40% and accelerating 3 clinical trials</span> to market.</p>
                 </div>
                 <div class="p-6 bg-gradient-to-br from-green-50 to-emerald-50 rounded-xl shadow-lg border-l-4 border-green-500 fade-in-up fade-in-up-delay-2">
-                    <p class="text-lg text-gray-700 font-semibold"><span class="text-green-600">Amazon Cloud Migration:</span> Led enterprise cloud strategies, delivering <span class="text-green-600">average cost savings of 35% and 3x faster data processing</span> for Fortune 500 clients.</p>
+                    <p class="text-lg text-gray-700 font-semibold">European companies showed high interest in cloud migration, but struggled to keep costs under control. As AWS Professional Service consultant I developed migration strategies, delivering <span class="text-green-600">average cost savings of 35% and 3x faster data processing</span> for Fortune 500 clients.</p>
                 </div>
                 <div class="p-6 bg-gradient-to-br from-green-50 to-emerald-50 rounded-xl shadow-lg border-l-4 border-green-500 fade-in-up fade-in-up-delay-3">
                     <p class="text-lg text-gray-700 font-semibold"><span class="text-green-600">glomex Streaming Analytics:</span> Architected real-time Lambda Architecture processing 50M+ events daily, winning <span class="text-green-600">Gartner Best Practice Award and enabling world-first in-time streaming cost predictions</span>.</p>
