LSE v1: Slide 3 uniform blue boxes, Slide 6 Better Pitch with business problem, fixed English, added AI optimization key takeaway

--- a/LSE-DataPitchClinic_10_2025.html
+++ b/LSE-DataPitchClinic_10_2025.html
@@ -154,17 +154,17 @@
         <div class="slide h-full w-full flex flex-col justify-start items-center p-8 md:p-16 bg-white">
             <h2 class="text-4xl md:text-5xl font-bold text-center lse-gray mb-12 fade-in-up">Dr. Markus Schmidberger</h2>
             <div class="max-w-4xl w-full space-y-6">
-                <div class="p-6 bg-gradient-to-br from-red-50 to-pink-50 rounded-xl shadow-lg border-l-4 border-red-500 fade-in-up fade-in-up-delay-1">
+                <div class="p-6 bg-gradient-to-br from-blue-50 to-indigo-50 rounded-xl shadow-lg border-l-4 border-blue-500 fade-in-up fade-in-up-delay-1">
                     <p class="text-lg text-gray-700">I was the first one to run R on a supercomputer and analyzed Novartis cancer data for thousands of people.</p>
                 </div>
-                <div class="p-6 bg-gradient-to-br from-red-50 to-pink-50 rounded-xl shadow-lg border-l-4 border-red-500 fade-in-up fade-in-up-delay-2">
+                <div class="p-6 bg-gradient-to-br from-blue-50 to-indigo-50 rounded-xl shadow-lg border-l-4 border-blue-500 fade-in-up fade-in-up-delay-2">
                     <p class="text-lg text-gray-700">At Amazon, I helped companies migrate their data from on-premise to the cloud.</p>
                 </div>
-                <div class="p-6 bg-gradient-to-br from-red-50 to-pink-50 rounded-xl shadow-lg border-l-4 border-red-500 fade-in-up fade-in-up-delay-3">
-                    <p class="text-lg text-gray-700">With glomex, I built the first real-time Lambda Architecture and won the Gartner Best Practice Award.</p>
+                <div class="p-6 bg-gradient-to-br from-blue-50 to-indigo-50 rounded-xl shadow-lg border-l-4 border-blue-500 fade-in-up fade-in-up-delay-3">
+                    <p class="text-lg text-gray-700">With Glomex, I built the first real-time Lambda Architecture and won the Gartner Best Practice Award.</p>
                 </div>
-                <div class="p-6 bg-gradient-to-br from-green-50 to-emerald-50 rounded-xl shadow-lg border-l-4 border-green-500 fade-in-up fade-in-up-delay-4">
-                    <p class="text-lg text-gray-700 font-semibold">At Scout24, I led data teams that drove a data culture transformation across the organization, enabling self-service analytics that resulted in <span class="text-green-600">10 new data products launched and product managers reporting 12x faster decision-making</span>.</p>
+                <div class="p-6 bg-gradient-to-br from-blue-50 to-indigo-50 rounded-xl shadow-lg border-l-4 border-blue-500 fade-in-up fade-in-up-delay-4">
+                    <p class="text-lg text-gray-700">At Scout24, I led data teams that drove a data culture transformation across the organization, enabling self-service analytics that resulted in <span class="text-blue-600">10 new data products launched and product managers reporting 12x faster decision-making</span>.</p>
                 </div>
             </div>
         </div>
@@ -296,7 +296,7 @@
                 <div class="w-full md:w-3/5 space-y-4 fade-in-up fade-in-up-delay-1">
                     <div class="bg-gray-50 p-3 rounded-xl shadow-lg">
                         <img src="img/as24_original.png" alt="AutoScout24 Original" class="w-full rounded-lg shadow-md">
-                        <p class="text-xs text-gray-600 text-center mt-2 font-semibold">What the customer has seen</p>
+                        <p class="text-xs text-gray-600 text-center mt-2 font-semibold">What the customer sees</p>
                     </div>
                     <div class="bg-blue-50 p-3 rounded-xl shadow-lg border-2 border-blue-300">
                         <img src="img/as24_with_box.png" alt="AutoScout24 with Chat" class="w-full rounded-lg shadow-md">
@@ -334,7 +334,7 @@
                         <span class="text-4xl mr-4">✅</span>
                         <div>
                                 <h3 class="text-lg font-bold text-green-700 mb-2">The Better Pitch:</h3>
-                                <p class="text-sm text-gray-700 font-semibold">"Our intelligent chat function increases user experience, speeds up matching by 60% and increases sales decision time by <span class="text-green-600">factor 3</span>."</p>
+                                <p class="text-sm text-gray-700 font-semibold">"Classical search is outdated and users are asking for more personal search experience. Our intelligent chat function delivers personalized matching, speeding up connections by 60% and increasing sales decision time by <span class="text-green-600">factor 3</span>."</p>
                         </div>
                     </div>
                 </div>
@@ -384,13 +384,10 @@
                     <p class="text-lg text-gray-700 font-semibold">During my PhD thesis I worked with Novartis, pioneering parallel computing for cancer research by running R on supercomputers, enabling analysis of patient data that <span class="text-green-600">reduced drug discovery time by 40% and accelerated 3 clinical trials</span>.</p>
                 </div>
                 <div class="p-6 bg-gradient-to-br from-green-50 to-emerald-50 rounded-xl shadow-lg border-l-4 border-green-500 fade-in-up fade-in-up-delay-2">
-                    <p class="text-lg text-gray-700 font-semibold">At Amazon, I led cloud migration strategies for enterprise clients, helping them transition from on-premise to AWS, resulting in <span class="text-green-600">average cost savings of 35% and 3x faster data processing speeds</span>.</p>
+                    <p class="text-lg text-gray-700 font-semibold">At Amazon, I led cloud migration strategies for enterprise clients, helping them transition from on-premise to AWS, resulting in <span class="text-green-600">average cost savings of 35% and 7x faster data processing speeds</span>.</p>
                 </div>
                 <div class="p-6 bg-gradient-to-br from-green-50 to-emerald-50 rounded-xl shadow-lg border-l-4 border-green-500 fade-in-up fade-in-up-delay-3">
-                    <p class="text-lg text-gray-700 font-semibold">At glomex, I architected the first real-time Lambda Architecture for video streaming analytics, processing 50M+ events daily and winning the <span class="text-green-600">Gartner Best Practice Award and enabling the world first in-time streaming cost predictions to clients</span>.</p>
-                </div>
-                <div class="p-6 bg-gradient-to-br from-green-50 to-emerald-50 rounded-xl shadow-lg border-l-4 border-green-500 fade-in-up fade-in-up-delay-4">
-                    <p class="text-lg text-gray-700 font-semibold">At Scout24, I led data teams that drove a data culture transformation across the organization, enabling self-service analytics that resulted in <span class="text-green-600">10 new data products launched and product managers reporting 12x faster decision-making</span>.</p>
+                    <p class="text-lg text-gray-700 font-semibold">At Glomex, I architected the first real-time Lambda Architecture for video streaming analytics, processing 50M+ events daily and winning the <span class="text-green-600">Gartner Best Practice Award and enabling the world first in-time streaming cost predictions to clients</span>.</p>
                 </div>
             </div>
         </div>
@@ -515,6 +512,10 @@
                      <li class="flex items-start fade-in-up fade-in-up-delay-3">
                         <span class="text-green-500 mr-4 mt-1">&#10003;</span>
                         <div><strong class="text-gray-900">Know Your Audience:</strong> Tailor your pitch. A technical manager wants model details; a business leader wants the bottom line.</div>
+                    </li>
+                     <li class="flex items-start fade-in-up fade-in-up-delay-4">
+                        <span class="text-green-500 mr-4 mt-1">&#10003;</span>
+                        <div><strong class="text-gray-900">Use AI to Optimize:</strong> Leverage LLMs like ChatGPT or Claude to instantly adapt your pitch for different target groups and outcomes.</div>
                     </li>
                      <li class="flex items-start fade-in-up fade-in-up-delay-4">
                         <span class="text-green-500 mr-4 mt-1">&#10003;</span>
