CAM v1: Added source references to Slides 4 and 5, added AI optimization key takeaway to Slide 12

--- a/CAM-DataPitchClinic_10_2025.html
+++ b/CAM-DataPitchClinic_10_2025.html
@@ -182,6 +182,7 @@
             <div class="mt-6 p-4 bg-yellow-50 border-l-4 border-yellow-500 rounded-lg fade-in-up fade-in-up-delay-4">
                 <p class="text-lg font-semibold text-gray-800">💡 The Solution: A compelling pitch that speaks the language of business strategy and ROI</p>
             </div>
+            <p class="text-xs text-gray-500 mt-4 fade-in-up fade-in-up-delay-4">Sources: Gartner 2024, Harvard Business Review, McKinsey & Company</p>
         </div>
 
         <!-- Slide 5: The Data-Business Gap -->
@@ -231,6 +232,7 @@
                     </div>
                 </div>
             </div>
+            <p class="text-xs text-gray-500 text-center mt-4 fade-in-up fade-in-up-delay-4">Sources: Gartner 2024, Harvard Business Review, NewVantage Partners</p>
         </div>
 
         <!-- Slide 6: Real Example - AutoScout24 -->
@@ -241,7 +243,7 @@
                 <div class="w-full md:w-3/5 space-y-4 fade-in-up fade-in-up-delay-1">
                     <div class="bg-gray-50 p-3 rounded-xl shadow-lg">
                         <img src="img/as24_original.png" alt="AutoScout24 Original" class="w-full rounded-lg shadow-md">
-                        <p class="text-xs text-gray-600 text-center mt-2 font-semibold">What the customer has seen</p>
+                        <p class="text-xs text-gray-600 text-center mt-2 font-semibold">What the customer sees</p>
                     </div>
                     <div class="bg-blue-50 p-3 rounded-xl shadow-lg border-2 border-blue-300">
                         <img src="img/as24_with_box.png" alt="AutoScout24 with Chat" class="w-full rounded-lg shadow-md">
@@ -319,10 +321,10 @@
                     <p class="text-lg text-gray-700 font-semibold">Novartis wasn't able to compare more than 100 patient data and couldn't simulate impact of gene elimination. In my PhD thesis I developed computational methods enabling analysis of thousands of patients, <span class="text-green-600">reducing drug discovery time by 40% and accelerating 3 clinical trials</span> to market.</p>
                 </div>
                 <div class="p-6 bg-gradient-to-br from-green-50 to-emerald-50 rounded-xl shadow-lg border-l-4 border-green-500 fade-in-up fade-in-up-delay-2">
-                    <p class="text-lg text-gray-700 font-semibold">European companies showed high interest in cloud migration, but struggled to keep costs under control. As AWS Professional Service consultant I developed migration strategies, delivering <span class="text-green-600">average cost savings of 35% and 3x faster data processing</span> for Fortune 500 clients.</p>
+                    <p class="text-lg text-gray-700 font-semibold">European companies showed high interest in cloud migration, but struggled to keep costs under control. As AWS Professional Service consultant I developed migration strategies, delivering <span class="text-green-600">average cost savings of 35% and 7x faster data processing</span> for Fortune 500 clients.</p>
                 </div>
                 <div class="p-6 bg-gradient-to-br from-green-50 to-emerald-50 rounded-xl shadow-lg border-l-4 border-green-500 fade-in-up fade-in-up-delay-3">
-                    <p class="text-lg text-gray-700 font-semibold">glomex clients couldn't forecast their streaming costs accurately, creating budget uncertainty that threatened contract renewals worth $15M annually. I architected a real-time analytics system processing 50M+ events daily, winning <span class="text-green-600">Gartner Best Practice Award and enabling world-first in-time streaming cost predictions</span> to clients.</p>
+                    <p class="text-lg text-gray-700 font-semibold">Glomex clients couldn't forecast their streaming costs accurately, creating budget uncertainty that threatened contract renewals worth $15M annually. I architected a real-time analytics system processing 50M+ events daily, winning <span class="text-green-600">Gartner Best Practice Award and enabling world-first in-time streaming cost predictions</span> to clients.</p>
                 </div>
             </div>
         </div>
@@ -435,6 +437,10 @@
                      <li class="flex items-start fade-in-up fade-in-up-delay-3">
                         <span class="text-green-500 mr-4 mt-1">&#10003;</span>
                         <div><strong class="text-gray-900">Know Your Audience:</strong> Tailor your pitch to each executive's priorities and KPIs.</div>
+                    </li>
+                     <li class="flex items-start fade-in-up fade-in-up-delay-4">
+                        <span class="text-green-500 mr-4 mt-1">&#10003;</span>
+                        <div><strong class="text-gray-900">Use AI to Optimize:</strong> AI is your best assistant to optimize and target your pitch for different stakeholders instantly.</div>
                     </li>
                      <li class="flex items-start fade-in-up fade-in-up-delay-4">
                         <span class="text-green-500 mr-4 mt-1">&#10003;</span>
